SEM2/COD7001/LABS/LAB6/cstn6/src/automated_tests/stress_tests/valid/test_43.lang
var a = 59;
var b = 84;
var c = a + b * 2;